# notifications-app

./: meson.build
src/: Application.vala
